// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback is called 1`] = `
EventsList(
  10: 1
  20: 2
)
`;

exports[`disposer is called 1`] = `
Array [
  Array [],
]
`;

exports[`fixes stream #4: \`cb\` must be called with one argument 1`] = `
Array [
  Array [
    1,
  ],
]
`;

exports[`fixes stream #6: After \`disposer\` was called, \`cb\` must not be called 1`] = `Array []`;
